client/src/components/PageContent/Welcome/Welcome.css
body {
  font-family: hero-new, sans-serif;
  font-weight: 400;
  font-style: normal;
  text-align: center;
  font-size: 36px;
}

.welcome-title {
  margin: 100px 0px 0px 0px;
  font-size: 50px;
}

@media only screen and (max-width: 801px) {
  .welcome-title {
    margin: 20px 0px 0px 0px;
  }
}

/*title "Go Tell The Bees" */
.yellow {
  color: #ff9f00;
}

/* mainText "Simple Acts"*/
.blue {
  color: #00c1a2;
  font-size: 35px;
}

.white {
  color: white;
}

.text-image-control {
  text-align: left;
  margin: 0px 0px 0px 15px;
}

@media only screen and (max-width: 802px) {
  .text-image-control {
    margin: 0px 10px 0px 10px;
  }
}

/*TEXT Text*/
.title-container {
  animation: fadeIn 2s;
}

.welcome-title {
  animation: fadeIn 3s;
}

.main-text {
  animation: fadeIn 5s;
  margin: 10px 0px 0px 0px;
}

.button {
  animation: fadeIn 10s;
}

/* Button */
.welcome-next-button-control0 {
  margin: 50px 0px 150px 0px;
}

.welcome-next-button-control1 {
  margin: 250px 0px 150px 0px;
}

.welcome-next-button-control2 {
  margin: 175px 0px 150px 0px;
}

@media only screen and (max-width: 801px) {
  .welcome-next-button-control2 {
    margin: 100px 0px 150px 0px;
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
/*TEXT END HERE*/
/*Transitions END HERE*/

/*Responsive Queries*/

/*Background Image-Design(on Landing page/Contact page and ChallengeChoicePage)*/
/*START*/
.title-container {
  margin: -5px 0px 75px 0px;
  animation: fadeIn 8s;
}

@media only screen and (max-width: 1005px) {
  .title-container::before {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    background-image: url(../../../images/SAboards/3boardlandscape.jpg);
    background-size: auto;
    opacity: 0.5;
  }
}

@media only screen and (min-width: 1004px) {
  .title-container::before {
    content: "";
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    background-image: url(../../../images/SAboards/3boardlandscape.jpg);
    background-size: cover;
    opacity: 0.5;
  }
}

.yellow,
.blue,
.transition-image,
.bee-default,
.welcome-title,
.main-text,
span,
.button,
.sidenav-container,
.nav-bar,
.menu-bars,
svg.menu-svg,
path,
.nav-menu,
.navbar-toggle,
.menu-svg,
svg,
.form-parent,
h1,
h2,
.translate-button {
  position: relative;
}

/*END*/

